--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -50,7 +50,7 @@
 
 #logged-in-container {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
@@ -86,6 +86,7 @@
 }
 
 #new-project-container {
+    margin-top: 2%;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -120,3 +121,77 @@
 
 
 
+@media (max-width: 600px) {
+
+    #logged-in-container {
+        width: 100%;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #admin-form-container {
+        background: white;
+        width: 80%;
+        height: 50%;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+    }
+    
+    #admin-form {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    #new-project-container {
+        margin-top: 5%;
+        padding: 1%;
+        display: flex;
+        flex-direction: row;
+        
+        width: 90%;
+        /* height: 10%; */
+        height: min-content;
+        height: 30vh;
+        align-items: center;
+        border: 1px solid black;
+        
+    }
+
+    #new-project-form {
+        display: flex;
+        flex-direction: column;
+        gap: 5%;
+        /* align-items: center; */
+        align-items: flex-start;
+        justify-content: space-evenly;
+        width: 100%;
+        height: 100%;
+        
+    }
+    
+    #new-project-form input, button, label {
+        font-size: 1.1em;
+        padding: 5px;
+        outline: none;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    
+    #new-project-form button {
+        color: white;
+        background-color: rgb(150, 150, 250);
+        border: none;
+        outline: none;
+        
+    }
+}
