--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -82,7 +82,7 @@
 }
 
 #create-project-container button:active {
-    transform: scale(0.95); /* Example scale, you can adjust as needed */
+    transform: scale(0.95);
 }
 
 #new-project-container {
@@ -114,11 +114,85 @@
     color: white;
     background-color: rgb(150, 150, 250);
     border: none;
-    outline: none;
-    
+    outline: none;   
 }
 
+#pictures-projects-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 160vh;
+    flex-wrap: wrap;
+}
 
+#pictures-projects-container img {
+    margin: 10px 0;
+}
+
+.project-picture-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 2%;
+    text-align: center;
+    background-color: white;
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+    transition: .3s;
+}
+
+.project-picture-container button {
+    border-radius: 5px;
+    border: none;
+    background: transparent;
+    transition: .2s;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.project-picture-container button:hover {
+    background-color: rgb(240, 240, 240);
+}
+
+.project-picture-container button:active {
+    background-color: rgb(200, 200, 200);
+}
+
+.project-picture-container span {
+    padding: 5px;
+    font-family:monospace
+}
+
+.project-picture-container:hover {
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+}
+
+#search {
+    --padding: 20px;
+    display: flex;
+    width: 40%;
+    justify-content: center;
+    background: #f6f6f6;
+    align-items: center;
+    padding: var(--padding);
+    border-radius: 40px;
+}
+
+#search-container {
+    width: 100%;
+    height: 20vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+}
+
+#search-container input {
+    font-size: 20px;
+    color: #333333;
+    margin-left: var(--padding);
+    outline: none;
+    border: none;
+    background:transparent;
+    width: 100%;
+}
 
 
 @media (max-width: 600px) {
