--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -36,7 +36,6 @@
 
 #admin-form label {
     font-size: 2.5em;
-
 }
 
 #admin-form button {
@@ -50,7 +49,6 @@
 
 #logged-in-container {
     width: 100%;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
@@ -59,7 +57,6 @@
     background-color: white;
     width: 100%;
     height: 10%;
-
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -91,7 +88,6 @@
     flex-direction: row;
     width: 100%;
     height: 10%;
-
     align-items: center;
 }
 
@@ -121,19 +117,21 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 160vh;
+    height: 70vh;
     flex-wrap: wrap;
+    overflow-y: auto;  /* Add this line */
 }
 
 #pictures-projects-container img {
     margin: 10px 0;
+    padding: 10px;
 }
 
 .project-picture-container {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    padding: 2%;
+    margin: 10px;
     text-align: center;
     background-color: white;
     box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
@@ -158,7 +156,6 @@
 
 .project-picture-container span {
     padding: 5px;
-    font-family:monospace
 }
 
 .project-picture-container:hover {
@@ -174,6 +171,7 @@
     align-items: center;
     padding: var(--padding);
     border-radius: 40px;
+    transition: padding 0.3s ease;
 }
 
 #search-container {
@@ -192,8 +190,12 @@
     border: none;
     background:transparent;
     width: 100%;
+    transition: .2s;
 }
 
+#create-project-container span {
+    margin-right: 20px;
+}
 
 @media (max-width: 600px) {
 
@@ -232,26 +234,21 @@
         padding: 1%;
         display: flex;
         flex-direction: row;
-        
         width: 90%;
-        /* height: 10%; */
         height: min-content;
         height: 30vh;
         align-items: center;
         border: 1px solid black;
-        
     }
 
     #new-project-form {
         display: flex;
         flex-direction: column;
         gap: 5%;
-        /* align-items: center; */
         align-items: flex-start;
         justify-content: space-evenly;
         width: 100%;
         height: 100%;
-        
     }
     
     #new-project-form input, button, label {
@@ -266,6 +263,5 @@
         background-color: rgb(150, 150, 250);
         border: none;
         outline: none;
-        
     }
 }
