--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -119,6 +119,101 @@
 }
 
 
+/* Extra */
+
+/* #pictures-projects-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 70vh;
+    flex-wrap: wrap;
+    overflow-y: auto;
+}
+
+#pictures-projects-container img {
+    margin: 10px 0;
+    padding: 10px;
+}
+
+.project-picture-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: 10px;
+    text-align: center;
+    background-color: white;
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+    transition: .3s;
+}
+
+.project-picture-container button {
+    border-radius: 5px;
+    border: none;
+    background: transparent;
+    transition: .2s;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.project-picture-container button:hover {
+    background-color: rgb(240, 240, 240);
+}
+
+.project-picture-container button:active {
+    background-color: rgb(200, 200, 200);
+}
+
+.project-picture-container span {
+    padding: 5px;
+}
+
+.project-picture-container:hover {
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+}
+
+#search {
+    --padding: 20px;
+    display: flex;
+    width: 40%;
+    justify-content: center;
+    background: #f6f6f6;
+    align-items: center;
+    padding: var(--padding);
+    border-radius: 40px;
+    transition: padding 0.3s ease;
+}
+
+#search-container {
+    width: 100%;
+    height: 20vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+}
+
+#search-container input {
+    font-size: 20px;
+    color: #333333;
+    margin-left: var(--padding);
+    outline: none;
+    border: none;
+    background:transparent;
+    width: 100%;
+    transition: .2s;
+}
+
+#create-project-container span {
+    margin-right: 20px;
+} */
+
+
+
+
+
+
+
+
+
+
 
 
 @media (max-width: 600px) {
